Updates to remove respondent representatives when they have same organisation ID with claimant representative.